@@ -2,6 +2,7 @@ v0.16 - INPROGRESS
 
     - Added `canvas` parameter to Drawing and draw method, and deprecated `backend` parameter.
     - Removed `elements` argument from Drawing. Use Drawing.add_elements.
+    - Added `Drawing.set_anchor` to define anchor points, useful for ElementDrawing instances.
     - Added shunt resistor symbol Rshunt
     - Fixed lead length of XOR gates to align with OR gates
     - Fixed greater and less than symbols in SVG backend
